fix: adjust position of guide process indicator for better alignment

--- a/src/renderer/styles/guide/step.css
+++ b/src/renderer/styles/guide/step.css
@@ -41,7 +41,7 @@
 
 .guide-process-indicator {
   position: absolute;
-  top: 96px;
+  top: 105px;
   left: 40px;
   z-index: 2;
   pointer-events: none;
